@@ -421,6 +421,7 @@
     <Compile Include="ContainerExtensions\GoodDependencyResolver.cs" />
     <Compile Include="Diagnostics\AllServicesDiagnosticTestCase.cs" />
     <Compile Include="ExceptionsTestCase.cs" />
+    <Compile Include="Facilities\Startable\StartableAndExceptionThrowingInstallersTestCase.cs" />
     <Compile Include="Facilities\TypedFactory\Selectors\WithNameSelector.cs" />
     <Compile Include="Facilities\TypedFactory\TypedFactorySelectorsTestCase.cs" />
     <Compile Include="GenericListConvenrterTestCase.cs" />
